doc/k8s-yaml/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mbusercenter-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "user.test.makeblock.com"
    # - "user.k8s.makeblock.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mbusercenter
spec:
  hosts:
  - "user.test.makeblock.com"
  # - "user.k8s.makeblock.com"
  gateways:
  - mbusercenter-gateway
  http:
  - match:
    # - uri:
    #     prefix: /v1/hello
    route:
    - destination:
        host: mbusercenter
        port:
          number: 80
